kubernetes/app-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo-deployment
  namespace: nodejs-app
  labels:
    app: app-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo 
    spec:
      containers:
      - name: app-demo
        image: app-demo-new
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
