kubernetes/app-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo-service
  namespace: nodejs-app
spec:
  selector:
    app: app-demo
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
